--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# JeongBeom add
+roadapikey.txt
+kakaoapikey.txt
+guideSearchApi/
+password.txt
+Data/
+data/
+__pycache__/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
